Adding bookmark support

--- a/README
+++ b/README
@@ -55,6 +55,21 @@ SUBROUTINES/METHODS
     returns the active element of the current browsing context's document
     element, if the document element is non-null.
 
+ add_bookmark
+
+    accepts a bookmark as a parameter and adds the specified bookmark to
+    the Firefox places database.
+
+        use Firefox::Marionette();
+    
+        my $bookmark = Firefox::Marionette::Bookmark->new(
+                         url   => 'https://metacpan.org',
+                         title => 'This is MetaCPAN!'
+                                 );
+        my $firefox = Firefox::Marionette->new()->add_bookmark($bookmark);
+
+    This method returns itself to aid in chaining methods.
+
  add_certificate
 
     accepts a hash as a parameter and adds the specified certificate to the
@@ -276,6 +291,40 @@ SUBROUTINES/METHODS
  default_binary_name
 
     just returns the string 'firefox'. Only of interest when sub-classing.
+
+ bookmarks
+
+    accepts either a scalar or a hash as a parameter. The scalar may by the
+    title of a bookmark or the URL of the bookmark. The hash may have the
+    following keys;
+
+      * title - The title of the bookmark.
+
+      * url - The url of the bookmark.
+
+    returns a list of all Firefox::Marionette::Bookmark objects that match
+    the supplied parameters (if any).
+
+        use Firefox::Marionette();
+        use v5.10;
+    
+        my $firefox = Firefox::Marionette->new();
+    
+        foreach my $bookmark ($firefox->bookmarks(title => 'This is MetaCPAN!')) {
+          say "Bookmark found";
+        }
+    
+        # OR
+    
+        foreach my $bookmark ($firefox->bookmarks()) {
+          say "Bookmark found with URL " . $bookmark->url();
+        }
+    
+        # OR
+    
+        foreach my $bookmark ($firefox->bookmarks('https://metacpan.org')) {
+          say "Bookmark found";
+        }
 
  browser_version
 
@@ -546,6 +595,24 @@ SUBROUTINES/METHODS
  current_chrome_window_handle
 
     see chrome_window_handle.
+
+ delete_bookmark
+
+    accepts a bookmark as a parameter and deletes the bookmark from the
+    Firefox database.
+
+        use Firefox::Marionette();
+        use v5.10;
+    
+        my $firefox = Firefox::Marionette->new();
+        foreach my $bookmark (reverse $firefox->bookmarks()) {
+          if ($bookmark->parent_guid() ne Firefox::Marionette::Bookmark::ROOT()) {
+            $firefox->delete_bookmark($bookmark);
+          }
+        }
+        say "Bookmarks? We don't need no stinking bookmarks!";
+
+    This method returns itself to aid in chaining methods.
 
  delete_certificate
 
@@ -1250,6 +1317,20 @@ SUBROUTINES/METHODS
         use v5.10;
     
         say Firefox::Marionette->new()->go('https://metacpan.org/')->html();
+
+ import_bookmarks
+
+    accepts a filesystem path to a bookmarks file and imports all the
+    bookmarks in that file. It can deal with backups from Firefox
+    <https://support.mozilla.org/en-US/kb/export-firefox-bookmarks-to-backup-or-transfer>,
+    Chrome <https://support.google.com/chrome/answer/96816?hl=en> or Edge.
+
+        use Firefox::Marionette();
+        use v5.10;
+    
+        my $firefox = Firefox::Marionette->new()->import_bookmarks('/path/to/bookmarks_file.html');
+
+    This method returns itself to aid in chaining methods.
 
  images
 
