--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Firefox-Marionette
 
+1.40  Wed Jul 19 04:14 2023
+       Documentation and test suite fixes
+
 1.39  Tue Jul 18 18:35 2023
        Adding bookmark support
        Adding tls parameter to Proxy->new method
