--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Firefox-Marionette
 
+1.42  Sat Aug 05 08:34 2023
+       Adding the proxy parameter to the new method
+       Fixes to ssh handling
+       Documentation and test suite fixes
+       Allowing a scalar filehandle to contain a certificate for the new method
+
 1.41  Sun Jul 23 17:12 2023
        Adding support for finding elements in a shadow DOM
 
