Adding WebAuthn methods

--- a/README
+++ b/README
@@ -218,6 +218,150 @@ SUBROUTINES/METHODS
     metacpan.org site, but no other site. To clear site headers, see the
     delete_site_header method
 
+ add_webauthn_authenticator
+
+    accepts a hash of the following keys;
+
+      * has_resident_key - boolean value to indicate if the authenticator
+      will support client side discoverable credentials
+      <https://www.w3.org/TR/webauthn-2/#client-side-discoverable-credential>
+
+      * has_user_verification - boolean value to determine if the
+      authenticator
+      <https://www.w3.org/TR/webauthn-2/#virtual-authenticators> supports
+      user verification
+      <https://www.w3.org/TR/webauthn-2/#user-verification>.
+
+      * is_user_consenting - boolean value to determine the result of all
+      user consent <https://www.w3.org/TR/webauthn-2/#user-consent>
+      authorization gestures
+      <https://www.w3.org/TR/webauthn-2/#authorization-gesture>, and by
+      extension, any test of user presence
+      <https://www.w3.org/TR/webauthn-2/#test-of-user-presence> performed
+      on the Virtual Authenticator
+      <https://www.w3.org/TR/webauthn-2/#virtual-authenticators>. If set to
+      true, a user consent will always be granted. If set to false, it will
+      not be granted.
+
+      * is_user_verified - boolean value to determine the result of User
+      Verification <https://www.w3.org/TR/webauthn-2/#user-verification>
+      performed on the Virtual Authenticator
+      <https://www.w3.org/TR/webauthn-2/#virtual-authenticators>. If set to
+      true, User Verification will always succeed. If set to false, it will
+      fail.
+
+      * protocol - the protocol spoken by the authenticator. This may be
+      CTAP1_U2F, CTAP2 or CTAP2_1.
+
+      * transport - the transport simulated by the authenticator. This may
+      be BLE, HYBRID, INTERNAL, NFC, SMART_CARD or USB.
+
+    It returns the newly created authenticator.
+
+        use Firefox::Marionette();
+        use Crypt::URandom();
+    
+        my $user_name = MIME::Base64::encode_base64( Crypt::URandom::urandom( 10 ), q[] ) . q[@example.com];
+        my $firefox = Firefox::Marionette->new( webauthn => 0 );
+        my $authenticator = $firefox->add_webauthn_authenticator( transport => Firefox::Marionette::WebAuthn::Authenticator::INTERNAL(), protocol => Firefox::Marionette::WebAuthn::Authenticator::CTAP2() );
+        $firefox->go('https://webauthn.io');
+        $firefox->find_id('input-email')->type($user_name);
+        $firefox->find_id('register-button')->click();
+        $firefox->await(sub { sleep 1; $firefox->find_class('alert-success'); });
+        $firefox->find_id('login-button')->click();
+        $firefox->await(sub { sleep 1; $firefox->find_class('hero confetti'); });
+
+ add_webauthn_credential
+
+    accepts a hash of the following keys;
+
+      * authenticator - contains the authenticator that the credential will
+      be added to. If this parameter is not supplied, the credential will
+      be added to the default authenticator, if one exists.
+
+      * host - contains the domain that this credential is to be used for.
+      In the language of WebAuthn <https://www.w3.org/TR/webauthn-2>, this
+      field is referred to as the relying party identifier
+      <https://www.w3.org/TR/webauthn-2/#relying-party-identifier> or RP ID
+      <https://www.w3.org/TR/webauthn-2/#rp-id>.
+
+      * id - contains the unique id for this credential, also known as the
+      Credential ID <https://www.w3.org/TR/webauthn-2/#credential-id>. If
+      this is not supplied, one will be generated.
+
+      * is_resident - contains a boolean that if set to true, a client-side
+      discoverable credential
+      <https://w3c.github.io/webauthn/#client-side-discoverable-credential>
+      is created. If set to false, a server-side credential
+      <https://w3c.github.io/webauthn/#server-side-credential> is created
+      instead.
+
+      * private_key - either a RFC5958
+      <https://www.rfc-editor.org/rfc/rfc5958> encoded private key encoded
+      using encode_base64url or a hash containing the following keys;
+
+	* name - contains the name of the private key algorithm, such as
+	"RSA-PSS" (the default), "RSASSA-PKCS1-v1_5", "ECDSA" or "ECDH".
+
+	* size - contains the modulus length of the private key. This is
+	only valid for "RSA-PSS" or "RSASSA-PKCS1-v1_5" private keys.
+
+	* hash - contains the name of the hash algorithm, such as "SHA-512"
+	(the default). This is only valid for "RSA-PSS" or
+	"RSASSA-PKCS1-v1_5" private keys.
+
+	* curve - contains the name of the curve for the private key, such
+	as "P-384" (the default). This is only valid for "ECDSA" or "ECDH"
+	private keys.
+
+      * sign_count - contains the initial value for a signature counter
+      <https://w3c.github.io/webauthn/#signature-counter> associated to the
+      public key credential source
+      <https://w3c.github.io/webauthn/#public-key-credential-source>. It
+      will default to 0 (zero).
+
+      * user - contains the userHandle
+      <https://w3c.github.io/webauthn/#public-key-credential-source-userhandle>
+      associated to the credential encoded using encode_base64url. This
+      property is optional.
+
+    It returns the newly created credential. If of course, the credential
+    is just created, it probably won't be much good by itself. However, you
+    can use it to recreate a credential, so long as you know all the
+    parameters.
+
+        use Firefox::Marionette();
+        use Crypt::URandom();
+    
+        my $user_name = MIME::Base64::encode_base64( Crypt::URandom::urandom( 10 ), q[] ) . q[@example.com];
+        my $firefox = Firefox::Marionette->new();
+        $firefox->go('https://webauthn.io');
+        $firefox->find_id('input-email')->type($user_name);
+        $firefox->find_id('register-button')->click();
+        $firefox->await(sub { sleep 1; $firefox->find_class('alert-success'); });
+        $firefox->find_id('login-button')->click();
+        $firefox->await(sub { sleep 1; $firefox->find_class('hero confetti'); });
+        foreach my $credential ($firefox->webauthn_credentials()) {
+            $firefox->delete_webauthn_credential($credential);
+
+    # ... time passes ...
+
+            $firefox->add_webauthn_credential(
+                      id            => $credential->id(),
+                      host          => $credential->host(),
+                      user          => $credential->user(),
+                      private_key   => $credential->private_key(),
+                      is_resident   => $credential->is_resident(),
+                      sign_count    => $credential->sign_count(),
+                                  );
+        }
+        $firefox->go('about:blank');
+        $firefox->clear_cache(Firefox::Marionette::Cache::CLEAR_COOKIES());
+        $firefox->go('https://webauthn.io');
+        $firefox->find_id('input-email')->type($user_name);
+        $firefox->find_id('login-button')->click();
+        $firefox->await(sub { sleep 1; $firefox->find_class('hero confetti'); });
+
  addons
 
     returns if pre-existing addons (extensions/themes) are allowed to run.
@@ -759,6 +903,54 @@ SUBROUTINES/METHODS
     Accept-Encoding
     <https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Accept-Encoding>
     headers from all future requests to metacpan.org.
+
+    This method returns itself to aid in chaining methods.
+
+ delete_webauthn_all_credentials
+
+    This method accepts an optional authenticator, in which case it will
+    delete all credentials from this authenticator. If no parameter is
+    supplied, the default authenticator will have all credentials deleted.
+
+        my $firefox = Firefox::Marionette->new();
+        my $authenticator = $firefox->add_webauthn_authenticator( transport => Firefox::Marionette::WebAuthn::Authenticator::INTERNAL(), protocol => Firefox::Marionette::WebAuthn::Authenticator::CTAP2() );
+        $firefox->delete_webauthn_all_credentials($authenticator);
+        $firefox->delete_webauthn_all_credentials();
+
+ delete_webauthn_authenticator
+
+    This method accepts an optional authenticator, in which case it will
+    delete this authenticator from the current Firefox instance. If no
+    parameter is supplied, the default authenticator will be deleted.
+
+        my $firefox = Firefox::Marionette->new();
+        my $authenticator = $firefox->add_webauthn_authenticator( transport => Firefox::Marionette::WebAuthn::Authenticator::INTERNAL(), protocol => Firefox::Marionette::WebAuthn::Authenticator::CTAP2() );
+        $firefox->delete_webauthn_authenticator($authenticator);
+        $firefox->delete_webauthn_authenticator();
+
+ delete_webauthn_credential
+
+    This method accepts either a credential and an authenticator, in which
+    case it will remove the credential from the supplied authenticator or
+
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new();
+        my $authenticator = $firefox->add_webauthn_authenticator( transport => Firefox::Marionette::WebAuthn::Authenticator::INTERNAL(), protocol => Firefox::Marionette::WebAuthn::Authenticator::CTAP2() );
+        foreach my $credential ($firefox->webauthn_credentials($authenticator)) {
+            $firefox->delete_webauthn_credential($credential, $authenticator);
+        }
+
+    just a credential, in which case it will remove the credential from the
+    default authenticator.
+
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new();
+        ...
+        foreach my $credential ($firefox->webauthn_credentials()) {
+            $firefox->delete_webauthn_credential($credential);
+        }
 
     This method returns itself to aid in chaining methods.
 
@@ -1905,6 +2097,11 @@ SUBROUTINES/METHODS
       * waterfox - only allow a binary that looks like a waterfox version
       <https://www.waterfox.net/> to be launched.
 
+      * webauthn - a boolean parameter to determine whether or not to add a
+      webauthn authenticator after the connection is established. The
+      default is to add a webauthn authenticator for Firefox after version
+      118.
+
       * width - set the width
       <http://kb.mozillazine.org/Command_line_arguments#List_of_command_line_arguments_.28incomplete.29>
       of the initial firefox window
@@ -2625,6 +2822,45 @@ SUBROUTINES/METHODS
 
     returns the current URI of current top level browsing context for
     Desktop. It is equivalent to the javascript document.location.href
+
+ webauthn_authenticator
+
+    returns the default WebAuthn authenticator created when the new method
+    was called.
+
+ webauthn_credentials
+
+    This method accepts an optional authenticator, in which case it will
+    return all the credentials attached to this authenticator. If no
+    parameter is supplied, credentials from the default authenticator will
+    be returned.
+
+        use Firefox::Marionette();
+        use v5.10;
+    
+        my $firefox = Firefox::Marionette->new();
+        foreach my $credential ($firefox->webauthn_credentials()) {
+           say "Credential host is " . $credential->host();
+        }
+    
+        # OR
+    
+        my $authenticator = $firefox->add_webauthn_authenticator( transport => Firefox::Marionette::WebAuthn::Authenticator::INTERNAL(), protocol => Firefox::Marionette::WebAuthn::Authenticator::CTAP2() );
+        foreach my $credential ($firefox->webauthn_credentials($authenticator)) {
+           say "Credential host is " . $credential->host();
+        }
+
+ webauthn_set_user_verified
+
+    This method accepts a boolean for the is_user_verified field and an
+    optional authenticator (the default authenticator will be used
+    otherwise). It sets the is_user_verified field to the supplied boolean
+    value.
+
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new();
+        $firefox->webauthn_set_user_verified(1);
 
  wheel
 
