--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Firefox-Marionette
 
+1.45  Fri Oct 05 21:43 2023
+       Adding WebAuthn methods
+       Documentation and test suite fixes
+
 1.44  Sun Sep 03 18:04 2023
        Adding download method for directly downloading a URL
        Allowing a list of proxies to be supplied to new method
