Allow the json method to accept a URL as a parameter

--- a/README
+++ b/README
@@ -1696,6 +1696,17 @@ SUBROUTINES/METHODS
     
         say Firefox::Marionette->new()->go('https://fastapi.metacpan.org/v1/download_url/Firefox::Marionette")->json()->{version};
 
+    In addition, this method can accept a URI as a parameter and retrieve
+    that URI via the firefox fetch call
+    <https://developer.mozilla.org/en-US/docs/Web/API/fetch> and
+    transforming the body to JSON via firefox
+    <https://developer.mozilla.org/en-US/docs/Web/API/Response/json_static>
+
+        use Firefox::Marionette();
+        use v5.10;
+    
+        say Firefox::Marionette->new()->json('https://freeipapi.com/api/json/')->{ipAddress};
+
  key_down
 
     accepts a parameter describing a key and returns an action for use in
