--- a/README
+++ b/README
@@ -1740,6 +1740,13 @@ SUBROUTINES/METHODS
                                      $firefox->key_up(CONTROL())
                                    )->content();
 
+ language
+
+    accepts an optional value for the Accept-Language
+    <https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Accept-Language>
+    header and sets this using the profile preferences. It returns the
+    current value, such as 'en-US, en'.
+
  loaded
 
     returns true if document.readyState === "complete"
